--- a/Stylesheets/style.css
+++ b/Stylesheets/style.css
@@ -2,10 +2,10 @@
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 }
 body{
-    background-color: #c7f7ff;
+    background-color: #effdff;
 }
 header{
-    background-color: #c7f7ff;
+    background-color: #effdff;
     color: rgb(0, 0, 0);
 }
 nav, nav h1, nav p{
@@ -35,7 +35,4 @@ p {
 ul{
     text-align: center;
     list-style-position: inside;
-}
-.container {
-    color: aliceblue;
 }
