--- a/mainStyle.css
+++ b/mainStyle.css
@@ -11,7 +11,7 @@ body {
     flex-direction: column;
     justify-content: center;
     height: 450px;
-    background-image: linear-gradient(0deg , rgba(0, 0, 0, 0.85), rgba(255, 0, 0, 0.7)), url('_MG_0524.jpg');
+    background-image: linear-gradient(0deg , rgba(0, 0, 0, 0.85), rgba(255, 0, 0, 0.7)), url('banner.jpg');
     background-size: cover;
     background-position: center;
 }
