--- a/mainDashboardStyle.css
+++ b/mainDashboardStyle.css
@@ -2,22 +2,18 @@ body {
     margin: 0;
     padding: 0;
     font-family: Poppins, sans-serif;
-    color: black;
+    color: #3c3c3c;
 }
 
 .web-banner {
     display: flex;
     flex-direction: column;
     justify-content: center;
-    height: 75vh;
+    align-items: center;
+    height: 100vh;
     padding: 0 5vw;
-    background-image: linear-gradient(
-        0deg,
-        rgba(244, 239, 239, 0.85),
-        rgba(252, 248, 248, 0.7)
-    ), url('banner.jpg');
+    background-image: url('banner-img.jpg');
     background-size: cover;
-    background-position: center;
 }
 
 .web-banner h1 {
@@ -32,18 +28,27 @@ body {
     margin-top: 2vw;
 }
 
-.contact-button {
-    background-color: #bc1212;
-    color: white;
-    padding: 10px 20px;
-    border: none;
-    border-radius: 50px;
-    cursor: pointer;
+.contact-btn {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-top: 10vw;
+    color: #ffffff;
+    background-color: #eb0000;
+    border-radius: 50vw;
+}
+
+.contact-btn p {
+    font-size: 1vw;
+    padding: 1vw 2vw;
+    margin: 0;
     text-decoration: none;
-    width: fit-content;
-    font-size: 1.2vw;
-    margin-left: 5.5vw;
-    margin-top: 2vw;
+    color: white;
+}
+
+.contact-btn:hover {
+    background-color: rgb(200, 30, 30);
+    cursor: pointer;
 }
 
 .job-container {
@@ -52,7 +57,7 @@ body {
     font-family: 'Poppins', sans-serif;
     border-radius: 30px;
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
-    background-color: rgba(208, 210, 212, 0.629);
+    background-color: #ffffff;
     width: 500px;
     height: 300px;
     margin-bottom: 30px;
@@ -73,7 +78,7 @@ body {
 .job-container .job-logo img {
     width: 100%;
     height: 100%;
-    object-fit: fill;
+    object-fit: scale-down;
     border-radius: 30px 30px 0 0;
 }
 
@@ -105,7 +110,7 @@ body {
 }
 
 .job-container .button .read-btn {
-    background-color: rgb(171, 24, 24);
+    background-color: #eb0000;
     color: white;
     padding: 10px 20px;
     border: none;
