--- a/jobOpportunities.css
+++ b/jobOpportunities.css
@@ -1,3 +1,11 @@
+.main-container {
+    display: flex;
+    gap: 20px;
+    align-items: flex-start;
+    flex-wrap: wrap;
+    padding: min(5em, 5%);
+}
+
 .job-container {
     display: flex;
     flex-direction: column;
@@ -16,7 +24,7 @@
     display: flex;
     align-items: center;
     border-radius: 30px 30px 0 0;
-    background-color: white;
+    background-color: #ffffff;
     width: 100%;
     height: 100px;
     overflow: hidden;
@@ -69,15 +77,6 @@
 
 .job-container .button .read-btn:hover {
     background-color: rgb(200, 30, 30);
-}
-
-.main-container {
-    display: flex;
-    gap: 20px;
-    align-items: flex-start;
-    flex-wrap: wrap;
-    padding: min(5em, 5%);
-    background-color: #f0f0f0;
 }
 
 .iframe-container {
