--- a/mainDashboardStyle.css
+++ b/mainDashboardStyle.css
@@ -1,7 +1,12 @@
-body {
+* {
+    box-sizing: border-box;
+}
+
+html, body {
     margin: 0;
     padding: 0;
     font-family: Poppins, sans-serif;
+    overflow-x: hidden;
     color: #3c3c3c;
 }
 
