--- a/websiteBanner.css
+++ b/websiteBanner.css
@@ -4,7 +4,7 @@
     justify-content: center;
     align-items: center;
     height: 100dvh;
-    padding: 0 5vw;
+    width: 100%;
     background-image: url('banner-img.jpg');
     background-size: cover;
     background-repeat: no-repeat;
@@ -15,12 +15,10 @@
 .web-banner h1 {
     font-size: 8vw;
     margin: 0;
-    margin-left: 5vw;
 }
 
 .web-banner p {
     font-size: 2vw;
-    margin-left: 5.5vw;
     margin-top: 2vw;
 }
 
@@ -39,7 +37,7 @@
     padding: 1vw 2vw;
     margin: 0;
     text-decoration: none;
-    color: white;
+    color: #ffffff;
 }
 
 .contact-btn:hover {
