--- a/Stylesheets/businessPermitSteps.css
+++ b/Stylesheets/businessPermitSteps.css
@@ -2,12 +2,14 @@
     display: flex;
     flex-direction: column;
     gap: 1rem;
+    align-items: center;
 }
 
 .business-permit-steps h2 {
-    display: flex;
-    justify-content: center;
     font-size: 3vw;
+    text-align: center;
+    border-top: 4px solid #e60000;
+    border-collapse: collapse;
 }
 
 .steps-wrapper {
@@ -18,30 +20,23 @@
     align-items: center;
 }
 
-.step-container {
-    display: flex;
-    align-items: center;
-    position: relative;
-    width: 85rem;
-}
-
 .steps {
     counter-increment: step;
     background-color: #f0f0f0;
     padding: 2rem;
-    width: 80rem;
+    width: 50rem;
     position: relative;
 }
 
-/* Step number circle */
-.steps::before {
+/* Step Number Circle */
+.steps ::before {
     content: counter(step);
     position: absolute;
     left: -8.5rem;
     top: 50%;
     transform: translateY(-50%);
-    width: 7rem;
-    height: 7rem;
+    width: 5rem;
+    height: 5rem;
     background-color: #e60000;
     color: white;
     font-weight: bold;
@@ -49,21 +44,15 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    font-size: 3vw;
+    font-size: 2vw;
 }
 
 .steps h3 {
     font-size: 1.8vw;
-    margin-bottom: 3rem;
     margin-top: 0rem;
-}
-
-.steps h4 {
-    font-size: 1.2vw;
-    margin: 0rem;
+    margin-bottom: 3rem;
 }
 
 .steps p {
     font-size: 1.2vw;
-    margin: 0rem;
 }
