--- a/Stylesheets/jobOpportunities.css
+++ b/Stylesheets/jobOpportunities.css
@@ -4,6 +4,9 @@
     align-items: flex-start;
     flex-wrap: wrap;
     padding: min(5em, 5%);
+    max-width: fit-content;
+    margin-left: auto;
+    margin-right: auto;
 }
 
 .job-container {
