--- a/Stylesheets/jobOpportunities.css
+++ b/Stylesheets/jobOpportunities.css
@@ -1,4 +1,31 @@
-.main-container {
+.job-title-row {
+    display: flex;
+    justify-content: left;
+    align-items: center;
+    margin-top: 5%;
+    margin-bottom: 0%;
+    margin-left:25%;
+    border-bottom: #eb0000 solid 2px;
+    border-width: 3px;
+    width: 50%;
+}
+
+.job-title-row h2{
+    font-size: 48px;
+    font-weight: 600;
+    text-align: left;
+    margin-bottom: 20px;
+}
+
+.job-title-row .red {
+    color: #eb0000;
+}
+
+.job-title-row .black {
+    color: #3c3c3c;
+}
+
+.job-panel {
     display: flex;
     gap: 20px;
     align-items: flex-start;
@@ -72,7 +99,7 @@
     color: white;
     padding: 10px 20px;
     border: none;
-    border-radius: 5px;
+    border-radius: 20px;
     cursor: pointer;
     font-size: 16px;
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
