--- a/Stylesheets/businessPermitStepsStyle.css
+++ b/Stylesheets/businessPermitStepsStyle.css
@@ -109,6 +109,7 @@
     margin-top: 2vw;
     background-color: #eb0000;
     border-radius: 50vw;
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
     transition: box-shadow 0.3s ease, transform 0.3s ease;
 }
 
