--- a/Stylesheets/jobOpportunitiesStyle.css
+++ b/Stylesheets/jobOpportunitiesStyle.css
@@ -10,7 +10,7 @@
     width: 50%;
 }
 
-.job-title-row h2{
+.job-title-row h2 {
     font-size: 48px;
     font-weight: 600;
     text-align: left;
@@ -78,7 +78,7 @@
     font-size: 24px;
     margin-top: 0px;
     margin-bottom: 10px;
-    color: #333;
+    color: #3c3c3c;
 }
 
 .job-container p {
@@ -96,17 +96,21 @@
 
 .job-container .button .read-btn {
     background-color: #eb0000;
-    color: white;
+    color: #ffffff;
     padding: 10px 20px;
     border: none;
     border-radius: 20px;
     cursor: pointer;
     font-size: 16px;
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
+    transition: box-shadow 0.3s ease, transform 0.3s ease;
 }
 
 .job-container .button .read-btn:hover {
-    background-color: rgb(200, 30, 30);
+    background-color: #B3291B;
+    box-shadow: 0 10px 30px rgba(0, 0, 0, 0.15);
+    transform: translateY(-5px);
+    cursor: pointer;
 }
 
 .iframe-container {
