--- a/Stylesheets/websiteBannerStyle.css
+++ b/Stylesheets/websiteBannerStyle.css
@@ -33,6 +33,7 @@
     margin-top: 6vw;
     background-color: #eb0000;
     border-radius: 50vw;
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
     transition: box-shadow 0.3s ease, transform 0.3s ease;
 }
 
