--- a/Stylesheets/businessDashboardStyle.css
+++ b/Stylesheets/businessDashboardStyle.css
@@ -5,9 +5,8 @@
 html, body {
     margin: 0;
     padding: 0;
-    font-family: Poppins, sans-serif;
+    font-family: Poppins;
     overflow-x: hidden;
-    color: #3c3c3c;
 }
 
 /* Responsive design */
