--- a/Stylesheets/jobOpportunitiesStyle.css
+++ b/Stylesheets/jobOpportunitiesStyle.css
@@ -78,13 +78,12 @@
     font-size: 24px;
     margin-top: 0px;
     margin-bottom: 10px;
-    color: #3c3c3c;
 }
 
 .job-container p {
     font-size: 16px;
     margin-top: 0px;
-    color: #555;
+    color: #414141c9;
     line-height: 1.4;
 }
 
