--- a/Stylesheets/businessDashboardStyle.css
+++ b/Stylesheets/businessDashboardStyle.css
@@ -5,7 +5,7 @@
 html, body {
     margin: 0;
     padding: 0;
-    font-family: Poppins;
+    font-family: 'Poppins', sans-serif;
     overflow-x: hidden;
 }
 
