--- a/Stylesheets/businessPermitTableStyle.css
+++ b/Stylesheets/businessPermitTableStyle.css
@@ -1,6 +1,6 @@
 table {
       width: 50%;
-      margin: auto; /* centers the table horizontally */
+      margin: auto;
       border: 1px solid #000;
       border-collapse: collapse;
     }
