--- a/Stylesheets/jobDetailsStyle.css
+++ b/Stylesheets/jobDetailsStyle.css
@@ -29,8 +29,8 @@
     color: #333;
 }
 
-.pageStyle p  {
-    font-size: 16px;
+.pageStyle p {
+    font-size: 14px;
     margin-top: 0px;
     color: #555;
     line-height: 1.4;
@@ -41,4 +41,25 @@
     height: 100%;
     object-fit: scale-down;
     border-radius: 30px 30px 0 0;
+}
+
+.contact-info {
+    font-size: 14px;
+    line-height: 1.6;
+}
+
+.contact-info div {
+    display: flex;
+    align-items: center;
+    margin: 5px 0;
+    color: #555;
+    font-size: 14px;
+    line-height: 1.4;
+}
+
+.contact-info .icon {
+    width: 18px;
+    height: 18px;
+    margin-right: 8px;
+    object-fit: contain;
 }
