--- a/Stylesheets/jobOpportunitiesStyle.css
+++ b/Stylesheets/jobOpportunitiesStyle.css
@@ -111,8 +111,9 @@
     cursor: pointer;
 }
 
-.iframe-container {
+.iframe-container { 
     border-radius: 20px;
     overflow: hidden;
     box-shadow: 0 4px 10px rgba(0, 0, 0, 0.2);
+    max-width: 60%;
 }
