--- a/Stylesheets/websiteBannerStyle.css
+++ b/Stylesheets/websiteBannerStyle.css
@@ -13,12 +13,12 @@
 }
 
 .web-banner h1 {
-    font-size: 8vw;
+    font-size: clamp(2rem, 9vw, 12rem);
     margin: 0;
 }
 
 .web-banner p {
-    font-size: 2vw;
+    font-size: clamp(0.7rem, 1.8vw, 50px);
     margin-top: 2vw;
 }
 
@@ -38,7 +38,7 @@
 }
 
 .contact-btn p {
-    font-size: 1.5vw;
+    font-size: clamp(0.7rem, 1.5vw, 50px);
     padding: 1vw 2vw;
     margin: 0;
     text-decoration: none;
