--- a/Stylesheets/jobOpportunitiesStyle.css
+++ b/Stylesheets/jobOpportunitiesStyle.css
@@ -39,14 +39,15 @@
 .job-container {
     display: flex;
     flex-direction: column;
-    border-radius: 30px;
+    border-radius: 10px;
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
     background-color: #ffffff;
-    width: 500px;
+    width: 400px;
     height: 300px;
     margin-bottom: 30px;
     position: relative;
     overflow: hidden;
+    padding: 20px;
 }
 
 .job-container .job-logo {
@@ -54,14 +55,17 @@
     align-items: center;
     border-radius: 30px 30px 0 0;
     background-color: #ffffff;
-    width: 100%;
+    width: auto;
     height: 100px;
     overflow: hidden;
+    justify-content: center;
+    padding: 5px;
+    margin-bottom: 15px;
 }
 
 .job-container .job-logo img {
     width: 100%;
-    height: 100%;
+    max-height: 60px;
     object-fit: scale-down;
     border-radius: 30px 30px 0 0;
 }
@@ -112,8 +116,9 @@
 }
 
 .iframe-container { 
-    border-radius: 20px;
+    border-radius: 5px;
     overflow: hidden;
     box-shadow: 0 4px 10px rgba(0, 0, 0, 0.2);
     max-width: 60%;
 }
+
