--- a/Stylesheets/websiteBannerStyle.css
+++ b/Stylesheets/websiteBannerStyle.css
@@ -37,7 +37,7 @@
     transition: box-shadow 0.3s ease, transform 0.3s ease;
 }
 
-.contact-btn p {
+.contact-btn a {
     font-size: clamp(0.7rem, 1.5vw, 50px);
     padding: 1vw 2vw;
     margin: 0;
