--- a/Stylesheets/jobOpportunitiesStyle.css
+++ b/Stylesheets/jobOpportunitiesStyle.css
@@ -4,8 +4,9 @@
 }
 .job-title-row {
     display: flex;
+    flex-direction: column;
     justify-content: left;
-    align-items: center;
+    align-items: flex-start;
     margin-top: 5%;
     margin-bottom: 0%;
     margin-left:25%;
@@ -18,7 +19,8 @@
     font-size: 48px;
     font-weight: 600;
     text-align: left;
-    margin-bottom: 20px;
+    margin-bottom: 5px;
+    align-items: flex-start;
 }
 
 .job-title-row .red-highlight {
@@ -121,3 +123,9 @@
     max-width: 60%;
 }
 
+.job-subtitle {
+    font-family: 'Poppins', sans-serif;
+    font-size: 18px;
+    margin-bottom: 10px;
+    color: #333;
+}
