--- a/Stylesheets/jobOpportunitiesStyle.css
+++ b/Stylesheets/jobOpportunitiesStyle.css
@@ -2,6 +2,7 @@
     margin-left: 8%;
     margin-right: 8%;
 }
+
 .job-title-row {
     display: flex;
     flex-direction: column;
@@ -9,10 +10,10 @@
     align-items: flex-start;
     margin-top: 5%;
     margin-bottom: 0%;
-    margin-left:25%;
+    margin-left:9%;
     border-bottom: #eb0000 solid 2px;
     border-width: 3px;
-    width: 50%;
+    width: 69vw;
 }
 
 .job-title-row h2 {
