--- a/Stylesheets/businessPermitTableStyle.css
+++ b/Stylesheets/businessPermitTableStyle.css
@@ -31,7 +31,7 @@ td {
 }
 
 tr:nth-child(even) td {
-  background-color: #ffe5e5;
+  background-color: #EAEAEA;
 }
 
 tr:last-child td {
@@ -57,7 +57,7 @@ tr:last-child td {
   background-color: #f0f0f0; 
   padding: 0px;
   max-width: 90%;
-  margin: 20%;          
+  margin: 6%;          
   box-shadow: 0 2px 6px rgba(0, 0, 0, 0.1);
   display: flex; 
   justify-content: center;
