--- a/Stylesheets/jobOpportunitiesStyle.css
+++ b/Stylesheets/jobOpportunitiesStyle.css
@@ -1,6 +1,6 @@
 .jobs-section {
-    margin-left: 8%;
-    margin-right: 8%;
+    margin-left: 78px;
+    margin-right: 78px;
 }
 
 .job-title-row {
@@ -45,8 +45,8 @@
     border-radius: 10px;
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
     background-color: #ffffff;
-    width: 400px;
-    height: 300px;
+    width: 448px;
+    height: 358px;
     margin-bottom: 30px;
     position: relative;
     overflow: hidden;
@@ -80,9 +80,11 @@
 }
 
 .job-container h2 {
-    font-size: 20px;
+    font-size: 28px;
+    font-weight: 700;
     margin-top: 0px;
     margin-bottom: 10px;
+    text-align: left;
 }
 
 .job-container p {
