--- a/Stylesheets/jobOpportunitiesStyle.css
+++ b/Stylesheets/jobOpportunitiesStyle.css
@@ -81,15 +81,17 @@
 .job-container h2 {
     font-size: 28px;
     font-weight: 700;
+    color: #5A413D;
     margin-top: 0px;
     margin-bottom: 10px;
     text-align: left;
 }
 
 .job-container p {
-    font-size: 13px;
+    font-size: 24px;
+    font-weight: 400;
     margin-top: 0px;
-    color: #414141c9;
+    color: #5A413D;
     line-height: 1.4;
 }
 
@@ -131,3 +133,5 @@
     margin-bottom: 10px;
     color: #333;
 }
+
+
