Updated Fonts and Job Opp. Section

--- a/Stylesheets/jobDetailsStyle.css
+++ b/Stylesheets/jobDetailsStyle.css
@@ -14,35 +14,30 @@
     font-size: 24px;
     margin-top: 0px;
     margin-bottom: 10px;
-    color: #333;
 }
 .pageStyle h2 {
     font-size: 24px;
     font-weight: 700;
     margin-top: 0px;
     margin-bottom: 10px;
-    color: #5A413D;
 }
 .pageStyle h3 {
     font-size: 22px;
     font-weight: 700;
     margin-top: 0px;
     margin-bottom: 10px;
-    color: #5A413D;
 }
 .pageStyle li {
-    font-size: 20px;
+    font-size: 16px;
     font-weight: 600;
     margin-top: 0px;
     margin-bottom: 10px;
-    color: #5A413D;
 }
 
 .pageStyle p {
     font-size: 16px;
     font-weight: 400;
     margin-top: 0px;
-    color: #5A413D;
     line-height: 1.4;
 }
 
@@ -63,8 +58,7 @@
     display: flex;
     align-items: center;
     margin: 5px 0;
-    color: #5A413D;
-    font-size: 14px;
+    font-size: 16px;
     line-height: 1.4;
 }
 
@@ -76,13 +70,12 @@
 }
 
 .redtext {
-    color: #8C1D18;
+    color: #eb0000;
 }
 
 .qualification li {
-    font-size: 18px;
+    font-size: 16px;
     font-weight: 500;
     margin-top: 0px;
     margin-bottom: 10px;
-    color: #5A413D;
 }
