--- a/Stylesheets/jobOpportunitiesStyle.css
+++ b/Stylesheets/jobOpportunitiesStyle.css
@@ -17,9 +17,9 @@
 
 .job-title-row h2 {
     font-size: 48px;
-    font-weight: 600;
+    font-weight: 700;
     text-align: left;
-    margin-bottom: 5px;
+    margin-bottom: 0px;
     align-items: flex-start;
 }
 
@@ -79,19 +79,17 @@
 }
 
 .job-container h2 {
-    font-size: 28px;
-    font-weight: 700;
-    color: #5A413D;
+    font-size: 22px;
     margin-top: 0px;
     margin-bottom: 10px;
     text-align: left;
 }
 
 .job-container p {
-    font-size: 24px;
+    font-size: 16px;
     font-weight: 400;
     margin-top: 0px;
-    color: #5A413D;
+    color: #6e6462;
     line-height: 1.4;
 }
 
@@ -108,7 +106,7 @@
     border: none;
     border-radius: 20px;
     cursor: pointer;
-    font-size: 15px;
+    font-size: 16px;
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
     transition: box-shadow 0.3s ease, transform 0.3s ease;
 }
@@ -129,9 +127,6 @@
 
 .job-subtitle {
     font-family: 'Poppins', sans-serif;
-    font-size: 18px;
+    font-size: 24px;
     margin-bottom: 10px;
-    color: #333;
 }
-
-
