--- a/Stylesheets/businessPermitTableStyle.css
+++ b/Stylesheets/businessPermitTableStyle.css
@@ -1,5 +1,5 @@
 table {
-  width: 90%;
+  width: 80%;
   margin: 2rem auto;
   padding: 0px; 
   border-collapse: separate;
@@ -11,12 +11,12 @@ table {
 
 #permitTable th:first-child,
 #permitTable td:first-child {
-  width: 75%; /* Business column */
+  width: 50%; /* Business column */
 }
 
 #permitTable th:nth-child(2),
 #permitTable td:nth-child(2) {
-  width: 25%; /* Price column */
+  width: 50%; /* Price column */
 }
 
 table:hover {
@@ -66,15 +66,19 @@ tr:last-child td {
   background-color: #ddd;
 }
 .container {
-  background-color: #f0f0f0; 
+  background-color: #f0f0f0;
+  height: 1375px;
   padding: 0px;
   max-width: 90%;
   margin: 6%;  
   margin-top: 15%;  
-  margin-bottom: 12%;      
+  margin-bottom: 12%;
   box-shadow: 0 2px 6px rgba(0, 0, 0, 0.1);
   display: flex; 
   justify-content: center;
+  box-shadow: 0px 5px 5px -5px rgba(0, 0, 0, 0.598);
+  position: relative;
+  overflow-y: auto;
 }
 
 .container h1{
@@ -111,13 +115,19 @@ tr:last-child td {
 .green {
   color: #04AA6D;
 }
+
 .paginationTable {
+  position: absolute;
+  bottom: 35px;
+  left: 50%;
+  transform: translateX(-50%);
   display: flex;
   justify-content: space-between;
   align-items: center;
-  margin: 30px 10% 40px 10%;
+  width: 80%;
   font-family: 'Poppins', sans-serif;
 }
+
 
 .pagination-buttons {
   display: flex;
