--- a/Stylesheets/businessPermitTableStyle.css
+++ b/Stylesheets/businessPermitTableStyle.css
@@ -1,6 +1,7 @@
 table {
   width: 80%;
   margin: 2rem auto;
+  margin-top: 10px;
   padding: 0px; 
   border-collapse: separate;
   border-spacing: 0;
@@ -67,7 +68,7 @@ tr:last-child td {
 }
 .container {
   background-color: #f0f0f0;
-  height: 1375px;
+  height: 1350px;
   padding: 0px;
   max-width: 90%;
   margin: 6%;  
@@ -85,6 +86,7 @@ tr:last-child td {
   font-size: 32px;
   font-style: italic;
   font-weight: bold;
+  margin-top: 0px;
   margin-bottom: 0px;
 }
 
@@ -93,6 +95,7 @@ tr:last-child td {
   font-weight: bold;
   text-align: center;
   margin-top: 0px;
+  margin-bottom: 0px;
 }
 
 .image {
@@ -118,14 +121,13 @@ tr:last-child td {
 
 .paginationTable {
   position: absolute;
-  bottom: 35px;
+  bottom: 45px;
   left: 50%;
   transform: translateX(-50%);
   display: flex;
   justify-content: space-between;
   align-items: center;
   width: 80%;
-  font-family: 'Poppins', sans-serif;
 }
 
 
