--- a/Stylesheets/businessPermitStepsStyle.css
+++ b/Stylesheets/businessPermitStepsStyle.css
@@ -100,6 +100,19 @@
     font-size: 20px;
 }
 
+.steps ul {
+    font-size: 20px;
+    line-height: 45px;
+}
+
+.steps b {
+    font-weight: 600;
+}
+
+.steps acronym {
+    text-decoration: none;
+}
+
 /* Hovering Effect for Step Box */
 .step-item:hover .steps {
     box-shadow: 0px 0px 50px rgba(235, 0, 0, 0.5);
@@ -118,12 +131,12 @@
 
 .connector-line-top {
     top: clamp(-9vw, -10vw, -12vw);
-    height: clamp(13vw, 15vw, 16vw);
+    height: clamp(15vw, 18vw, 20vw);
 }
 
 .connector-line-bottom {
-    top: 230px;
-    height: clamp(13vw, 14.5vw, 16vw);
+    top: 255px;
+    height: clamp(15vw, 17.5vw, 19vw);
 }
 
 /* Hovering Effect for Steps */
@@ -149,32 +162,4 @@
 .permit-note p {
     font-size: 20px;
     font-weight: 400;
-}
-
-.apply-btn {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    margin-top: 2vw;
-    background-color: #eb0000;
-    border-radius: 50vw;
-    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
-    transition: box-shadow 0.3s ease, transform 0.3s ease;
-}
-
-.apply-btn a {
-    text-decoration: none;
-    font-size: 24px;
-    font-weight: 500;
-    padding: 1vw 3vw;
-    margin: 0;
-    text-decoration: none;
-    color: white
-}
-
-.apply-btn:hover {
-    background-color: #B3291B;
-    box-shadow: 0 10px 30px rgba(0, 0, 0, 0.15);
-    transform: translateY(-5px);
-    cursor: pointer;
 }
