--- a/Stylesheets/jobOpportunitiesStyle.css
+++ b/Stylesheets/jobOpportunitiesStyle.css
@@ -9,7 +9,7 @@
     justify-content: left;
     align-items: flex-start;
     margin-top: 5%;
-    margin-bottom: 0%;
+    margin-bottom: 0px;
     border-bottom: #eb0000 solid 2px;
     border-width: 3px;
     width: 87.1vw;
@@ -25,6 +25,13 @@
 
 .job-title-row .red-highlight {
     color: #eb0000;
+}
+
+.job-subtitle {
+    font-family: 'Poppins', sans-serif;
+    font-size: 24px;
+    margin-bottom: 10px;
+    margin-top: 0px
 }
 
 .job-panel {
@@ -123,10 +130,4 @@
     overflow: hidden;
     box-shadow: 0 4px 10px rgba(0, 0, 0, 0.2);
     max-width: 60%;
-}
-
-.job-subtitle {
-    font-family: 'Poppins', sans-serif;
-    font-size: 24px;
-    margin-bottom: 10px;
 }
