--- a/Stylesheets/businessPermitTableStyle.css
+++ b/Stylesheets/businessPermitTableStyle.css
@@ -63,9 +63,6 @@ tr:last-child td {
   background-color: #f8f8f8;
 }
 
-#pagination .page-btn:hover {
-  background-color: #ddd;
-}
 .container {
   background-color: #f0f0f0;
   height: 1350px;
@@ -148,7 +145,9 @@ tr:last-child td {
 }
 
 .pageTable:hover {
-  background-color: #ddd;
+  background-color: #eb0000;
+  color: white;
+  cursor: pointer;
 }
 
 .pageTable.active {
