Added Header Footer | Added Relative FilePath | Added Tagapo Logo

--- a/Stylesheets/businessPermitTableStyle.css
+++ b/Stylesheets/businessPermitTableStyle.css
@@ -74,6 +74,7 @@ tr:last-child td {
   box-shadow: 0 2px 6px rgba(0, 0, 0, 0.1);
   display: flex; 
   justify-content: center;
+  flex-direction: column;
   box-shadow: 0px 5px 5px -5px rgba(0, 0, 0, 0.598);
   position: relative;
   overflow-y: auto;
