Added proposed Title Color Animation

--- a/Stylesheets/livelihoodWebsiteBannerStyle.css
+++ b/Stylesheets/livelihoodWebsiteBannerStyle.css
@@ -20,6 +20,10 @@
 
 .web-banner .title span {
   color: #eb0000;
+  /*
+  text-shadow: 0 0 6px rgba(25, 0, 255, .7);
+  animation: blueYellowGlow 2s ease-in-out infinite alternate;
+  */
 }
 
 .web-banner>* {
@@ -47,3 +51,10 @@
   transform: translateY(-5px);
   cursor: pointer;
 }
+/*
+@keyframes blueYellowGlow {
+  100% {
+    text-shadow: 0 0 6px rgba(234, 245, 39, .7);
+  }
+}
+*/
